<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context="com.eckovation.course.quizz.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:contentDescription="@string/content_desc_login_trophy_image"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_trophy" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_64x"
        android:layout_marginRight="@dimen/dimen_64x"
        android:layout_marginTop="@dimen/dimen_16x"
        android:hint="@string/login_name"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            app:backgroundTint="@color/light_grey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_64x"
        android:layout_marginRight="@dimen/dimen_64x"
        android:layout_marginTop="@dimen/dimen_16x"
        android:hint="@string/login_email"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/light_grey" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_64x"
        android:layout_marginRight="@dimen/dimen_64x"
        android:layout_marginTop="@dimen/dimen_16x"
        android:hint="@string/login_password"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/light_grey">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            app:backgroundTint="@color/light_grey" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_32x"
        android:text="@string/login_forgot_password"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button_submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32x"
        android:layout_marginLeft="@dimen/dimen_64x"
        android:layout_marginRight="@dimen/dimen_64x"
        android:layout_marginTop="@dimen/dimen_32x"
        android:paddingBottom="@dimen/dimen_8x"
        android:paddingTop="@dimen/dimen_8x"
        android:text="@string/signup_button_submit"
        android:textColor="@color/white"
        app:theme="@style/CustomButtonOverlay" />

</LinearLayout>
