<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.eckovation.course.quizz.QuestionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/countdown_timer_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/dimen_16x"
                    android:layout_marginRight="@dimen/dimen_16x"
                    android:layout_marginTop="@dimen/dimen_16x"
                    android:background="@drawable/circle_stroke_yellow"
                    android:padding="@dimen/dimen_16x"
                    android:text="@string/countdown_dummy"
                    android:textColor="@color/question_text_yellow"
                    android:textSize="@dimen/text_dimen_huge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/countdown_timer_static_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/countdown_timer_question"
                    android:layout_marginEnd="@dimen/dimen_16x"
                    android:layout_marginRight="@dimen/dimen_16x"
                    android:text="@string/time_left"
                    android:textColor="@color/question_text_yellow"
                    android:textSize="@dimen/text_dimen_small" />


                <TextView
                    android:id="@+id/question_number_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/countdown_timer_static_text"
                    android:layout_toLeftOf="@id/countdown_timer_static_text"
                    android:layout_toStartOf="@id/countdown_timer_static_text"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen_16x"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_dimen_medium"
                    android:textStyle="bold"
                    tools:text="@string/question_no" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_content_question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
